Fixed weird overflow with sidebar

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -36,7 +36,6 @@
 
 main {
     height: 100%;
-    background-color: #f4f4f9;
     color: #333;
 }
 
@@ -67,6 +66,7 @@ main {
     background-color: #ff3b30;
     padding: .4rem .8rem;
     transition: all 0.5s ease;
+    z-index: 50;
 }
 
 .sidebar.active~.main.content {
@@ -219,7 +219,6 @@ main {
 
 .main-content {
     position: relative;
-    background-color: #eee;
     min-height: 100vh;
     top: 0;
     left: 80px;
